--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -6,8 +6,8 @@
   "item.simplebuilding.diamond_chisel": "Diamantmeißel",
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Benutze dies, um Blöcke zu formen.",
-  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block. Schleichen zum Umkehren.",
+  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen formbaren Block. Schleichen zum Umkehren.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
   "item.simplebuilding.copper_spatula": "Kupferspachtel",
@@ -16,8 +16,8 @@
   "item.simplebuilding.diamond_spatula": "Diamantspachtel",
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Benutze dies, um Blöcke zu glätten.",
-  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
+  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen formbaren Block.",
 
   "item.simplebuilding.copper_core": "Kupferkern",
   "item.simplebuilding.iron_core": "Eisenkern",
@@ -25,24 +25,24 @@
   "item.simplebuilding.diamond_core": "Diamantkern",
   "item.simplebuilding.netherite_core": "Netheritkern",
 
-  "item.simplebuilding.copper_building_wand": "Kupferbaustab",
-  "item.simplebuilding.iron_building_wand": "Eisenbaustab",
-  "item.simplebuilding.gold_building_wand": "Goldbaustab",
-  "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
-  "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
-  "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
-  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
+  "item.simplebuilding.copper_building_wand": "Kupfer-Baustab",
+  "item.simplebuilding.iron_building_wand": "Eisen-Baustab",
+  "item.simplebuilding.gold_building_wand": "Gold-Baustab",
+  "item.simplebuilding.diamond_building_wand": "Diamant-Baustab",
+  "item.simplebuilding.netherite_building_wand": "Netherit-Baustab",
+  "tooltip.simplebuilding.building_wand.size": "Platziert eine %s x %s Fläche.",
+  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Linie von %s Blöcken.",
 
   "item.simplebuilding.sledgehammer": "Vorschlaghammer",
-  "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
-  "item.simplebuilding.copper_sledgehammer": "Kupfervorschlaghammer",
-  "item.simplebuilding.iron_sledgehammer": "Eisenvorschlaghammer",
-  "item.simplebuilding.gold_sledgehammer": "Goldvorschlaghammer",
-  "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
-  "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
+  "item.simplebuilding.stone_sledgehammer": "Stein-Vorschlaghammer",
+  "item.simplebuilding.copper_sledgehammer": "Kupfer-Vorschlaghammer",
+  "item.simplebuilding.iron_sledgehammer": "Eisen-Vorschlaghammer",
+  "item.simplebuilding.gold_sledgehammer": "Gold-Vorschlaghammer",
+  "item.simplebuilding.diamond_sledgehammer": "Diamant-Vorschlaghammer",
+  "item.simplebuilding.netherite_sledgehammer": "Netherit-Vorschlaghammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Benutze dies, um mehrere Blöcke auf einmal abzubauen.",
-  "tooltip.simplebuilding.building_wand": "Benutze dies, um mehr Blöcke auf einmal zu platzieren.",
+  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
+  "tooltip.simplebuilding.building_wand": "Benutzen, um mehrere Blöcke gleichzeitig zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -67,19 +67,25 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann verzaubert mehr Gegenstände halten.",
-  "item.simplebuilding.netherite_bundle": "Netheritbündel",
-  "tooltip.simplebuilding.netherite_bundle": "Kann verzaubert noch mehr Gegenstände halten.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Items halten, wenn verzaubert.",
+  "item.simplebuilding.netherite_bundle": "Netherit-Bündel",
+  "tooltip.simplebuilding.netherite_bundle": "Kann noch mehr Items halten, wenn verzaubert.",
 
   "item.simplebuilding.quiver": "Köcher",
   "tooltip.simplebuilding.quiver": "Hält Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
-  "item.simplebuilding.netherite_quiver": "Netheritköcher",
+  "item.simplebuilding.netherite_quiver": "Netherit-Köcher",
   "tooltip.simplebuilding.netherite_quiver": "Hält mehr Pfeile. Funktioniert in der Nebenhand oder im Brustpanzer-Slot.",
 
-  "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
-  "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers an.",
+  "item.simplebuilding.magnet": "Magnet",
+  "tooltip.simplebuilding.magnet.filtering": "Filtert: %s",
+  "tooltip.simplebuilding.magnet.no_filter": "Kein Filter aktiv",
+  "tooltip.simplebuilding.magnet.clear": "Schleichen + Rechtsklick zum Löschen",
+  "tooltip.simplebuilding.magnet.hand": "Funktioniert in Haupt- oder Nebenhand",
 
-  "itemgroup.simplebuilding.building_items": "Baugegenstände",
+  "item.simplebuilding.velocity-gauge": "Geschwindigkeitsmesser",
+  "tooltip.simplebuilding.velocity-gauge.tooltip": "Zeigt die aktuelle Geschwindigkeit des Spielers.",
+
+  "itemgroup.simplebuilding.building_items": "SimpleBuilding Items",
 
   "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
   "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
@@ -87,37 +93,37 @@
 
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.deep_pockets.description": "Erhöht die Kapazität von Bündeln.",
-  "enchantment.simplebuilding.master_builder": "Meisterbauer",
-  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus deinem Bündel.",
+  "enchantment.simplebuilding.master_builder": "Baumeister",
+  "enchantment.simplebuilding.master_builder.description": "Platziert Blöcke direkt aus dem Bündel.",
   "enchantment.simplebuilding.funnel": "Trichter",
-  "enchantment.simplebuilding.funnel.description": "Trichtert automatisch Gegenstände in dein Bündel.",
-  "enchantment.simplebuilding.override": "Überschreiben",
-  "enchantment.simplebuilding.override.description": "Erlaubt den Abbau von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
+  "enchantment.simplebuilding.funnel.description": "Füllt Items automatisch in das Bündel.",
+  "enchantment.simplebuilding.override": "Übersteuerung",
+  "enchantment.simplebuilding.override.description": "Erlaubt das Abbauen von Blöcken, die normalerweise nicht vom Vorschlaghammer unterstützt werden.",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.radius.description": "Erhöht den Wirkungsbereich von Vorschlaghämmern.",
+  "enchantment.simplebuilding.radius.description": "Vergrößert den Wirkungsbereich von Vorschlaghämmern.",
   "enchantment.simplebuilding.strip_miner": "Tunnelgräber",
   "enchantment.simplebuilding.strip_miner.description": "Gräbt einen Tunnel beim Schleichen.",
-  "enchantment.simplebuilding.vein_miner": "Ader-Abbau",
-  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze des gleichen Typs beim Schleichen ab.",
+  "enchantment.simplebuilding.vein_miner": "Aderabbau",
+  "enchantment.simplebuilding.vein_miner.description": "Baut alle verbundenen Erze desselben Typs ab beim Schleichen.",
   "enchantment.simplebuilding.kinetic_protection": "Kinetischer Schutz",
   "enchantment.simplebuilding.kinetic_protection.description": "Reduziert kinetischen Schaden.",
-  "enchantment.simplebuilding.cover": "Verkleidung",
+  "enchantment.simplebuilding.cover": "Abdeckung",
   "enchantment.simplebuilding.cover.description": "Platziert Blöcke auf der Oberfläche, die du ansiehst.",
   "enchantment.simplebuilding.bridge": "Brücke",
   "enchantment.simplebuilding.bridge.description": "Platziert Blöcke vor dir.",
   "enchantment.simplebuilding.linear": "Linear",
   "enchantment.simplebuilding.linear.description": "Platziert Blöcke in einer geraden Linie beim Schleichen.",
   "enchantment.simplebuilding.drawer": "Schublade",
-  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln, sperrt sie aber auf einen bestimmten Gegenstand.",
+  "enchantment.simplebuilding.drawer.description": "Erhöht die Lagerkapazität von Truhen und Bündeln, sperrt sie aber auf ein Item.",
   "enchantment.simplebuilding.versatility": "Vielseitigkeit",
-  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug für die Aufgabe.",
+  "enchantment.simplebuilding.versatility.description": "Wechselt beim Schleichen zum besten Werkzeug.",
 
   "enchantment.simplebuilding.break_through": "Durchbruch",
-  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht von Blöcken abzubauen.",
+  "enchantment.simplebuilding.break_through.description": "Erlaubt dem Vorschlaghammer, eine zweite Schicht Blöcke zu brechen.",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
   "enchantment.simplebuilding.color_palette.description": "Platziert Blöcke zufällig.",
   "enchantment.simplebuilding.double_jump": "Luftsprung",
-  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung auszuführen.",
+  "enchantment.simplebuilding.double_jump.description": "Erlaubt dem Spieler einen zusätzlichen Sprung.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
@@ -126,32 +132,32 @@
   "enchantment.level.4": "IV",
   "enchantment.level.5": "V",
 
-  "text.autoconfig.simplebuilding.option.tools": "Werkzeug-Einstellungen",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Berührung des Konstrukteurs).",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Deckkraft der Baustab-Hervorhebung",
-  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Block-Hervorhebung des Baustabs (0.0 - 1.0).",
+  "text.autoconfig.simplebuilding.option.tools": "Werkzeugeinstellungen",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant Schleichen umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.@Tooltip": "Wenn wahr, zeigt der Oktant die Fläche an, wenn NICHT geschlichen wird (mit Konstrukteurs-Händchen).",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
+  "text.autoconfig.simplebuilding.option.tools.BuildingHighlightOpacity.@Tooltip": "Deckkraft der Baustab-Vorschau (0.0 - 1.0).",
 
   "text.autoconfig.simplebuilding.option.tools.enableToolAnimations": "Werkzeuganimationen aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet benutzerdefinierte Werkzeuganimationen wie die Meißel-Rotation um.",
+  "text.autoconfig.simplebuilding.option.tools.enableToolAnimations.@Tooltip": "Schaltet eigene Animationen wie die Meißel-Rotation an/aus.",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation": "Meißel-Animation aktivieren",
   "text.autoconfig.simplebuilding.option.tools.enableChiselAnimation.@Tooltip": "Spezifischer Schalter für das visuelle Feedback des Meißels.",
 
   "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
   "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zu Dorfbewohnern hinzu.",
-  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrenden Händler aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrender Händler aktivieren",
   "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades.@Tooltip": "Fügt Meißel- und Baustab-Handel zum Fahrenden Händler hinzu.",
   "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
-  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Gegenstände zu Verlies-/Strukturtruhen hinzu.",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.@Tooltip": "Fügt Items zu Dungeon-/Strukturtruhen hinzu.",
 
-  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Deckkraft der Baustab-Hervorhebung",
+  "text.autoconfig.simplebuilding.option.tools.buildingHighlightOpacity": "Baustab Hervorhebung Deckkraft",
 
-  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktionen umkehren",
-  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt das Schleichen bei der Verwendung von Bündeln die entgegengesetzte Aktion aus (Einlagern vs. Entnehmen).",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions": "Bündel-Interaktion umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertBundleInteractions.@Tooltip": "Wenn wahr, führt Schleichen bei Bündeln die gegenteilige Aktion aus (Einfügen vs Entnehmen).",
 
   "text.autoconfig.simplebuilding.option.enableDoubleJump": "Luftsprung-Verzauberung aktivieren",
-  "text.autoconfig.simplebuilding.option.tools.enableDoubleJump.@Tooltip": "Schaltet die Funktionalität der Luftsprung-Verzauberung um.",
+  "text.autoconfig.simplebuilding.option.enableDoubleJump.@Tooltip": "Schaltet die Funktionalität der Luftsprung-Verzauberung an/aus.",
 
   "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
   "item.simplebuilding.reinforced_chest": "Verstärkte Truhe",
@@ -172,9 +178,9 @@
   "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
   "container.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
   "item.simplebuilding.reinforced_blast_furnace": "Verstärkter Schmelzofen",
-  "container.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
-  "block.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
-  "item.simplebuilding.netherite_blast_furnace": "Netheritschmelzofen",
+  "container.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
+  "item.simplebuilding.netherite_blast_furnace": "Netherit-Schmelzofen",
 
   "block.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
   "container.simplebuilding.reinforced_furnace": "Verstärkter Ofen",
@@ -186,17 +192,27 @@
   "block.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
   "container.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
   "item.simplebuilding.reinforced_smoker": "Verstärkter Räucherofen",
-  "container.simplebuilding.netherite_smoker": "Netheriträucherofen",
-  "block.simplebuilding.netherite_smoker": "Netheriträucherofen",
-  "item.simplebuilding.netherite_smoker": "Netheriträucherofen",
+  "container.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
+  "block.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
+  "item.simplebuilding.netherite_smoker": "Netherit-Räucherofen",
 
-  "item.simplebuilding.construction_light": "Baulicht",
+  "item.simplebuilding.construction_light": "Baustellenlicht",
+  "block.simplebuilding.construction_light": "Baustellenlicht",
 
   "item.simplebuilding.diamond_pebble": "Diamantkiesel",
   "item.simplebuilding.cracked_diamond": "Rissiger Diamant",
   "item.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock",
+  "block.simplebuilding.cracked_diamond_block": "Rissiger Diamantblock",
 
-  "simplebuilding.gui.title": "Oktant-Manager",
+  "item.simplebuilding.glowing_trim_template": "Licht Rüstungsverzierung",
+  "trim_pattern.simplebuilding.glowing": "Leuchtverzierung",
+  "upgrade.simplebuilding.glowing_upgrade": "Leuchtendes Rüstungsupgrade",
+  "item.minecraft.smithing_template.glowing_trim_template.applies_to": "Rüstung",
+  "item.minecraft.smithing_template.glowing_trim_template.ingredients": "Leuchttintenbeutel",
+  "item.minecraft.smithing_template.glowing_trim_template.base_slot_description": "Rüstung hinzufügen",
+  "item.minecraft.smithing_template.glowing_trim_template.additions_slot_description": "Leuchttinte hinzufügen",
+
+  "simplebuilding.gui.title": "Oktant Manager",
   "simplebuilding.gui.locked": "§c\uD83D\uDD12",
   "simplebuilding.gui.unlocked": "§a\uD83D\uDD13",
   "simplebuilding.gui.pos1": "Start (1)",
@@ -206,7 +222,7 @@
   "simplebuilding.gui.shape": "Form: %s",
   "simplebuilding.gui.orientation": "Achse: %s",
   "simplebuilding.gui.hollow": "Hohl: %s",
-  "simplebuilding.gui.layer": "Ebenen-Modus: %s",
+  "simplebuilding.gui.layer": "Ebenenmodus: %s",
   "simplebuilding.gui.order": "Reihenfolge: %s",
 
   "simplebuilding.shape.cuboid": "Quader",
@@ -218,20 +234,21 @@
   "simplebuilding.shape.ellipse": "Ellipse (2D)",
 
   "simplebuilding.order.default": "Standard",
-  "simplebuilding.order.bottom_up": "Von unten nach oben",
-  "simplebuilding.order.top_down": "Von oben nach unten",
-
+  "simplebuilding.order.bottom_up": "Von Unten nach Oben",
+  "simplebuilding.order.top_down": "Von Oben nach Unten",
 
   "key.simplebuilding.settings": "Einstellungsmenü öffnen",
   "category.simplebuilding.general": "SimpleBuilding",
 
-  "simplebuilding.gui.wand_title": "Baustab Einstellungen",
+  "simplebuilding.gui.wand_title": "Baustab-Einstellungen",
   "simplebuilding.gui.wand_settings": "Konfiguration",
   "simplebuilding.gui.radius": "Radius",
   "simplebuilding.gui.axis": "Achse",
   "simplebuilding.gui.on": "AN",
   "simplebuilding.gui.off": "AUS",
 
-  "simplebuilding.gui.octant_title": "Oktant Einstellungen",
+  "simplebuilding.gui.octant_title": "Oktant-Einstellungen",
 
+  "text.autoconfig.simplebuilding.option.enableArmorTrimBenefits": "Rüstungsbesatz-Vorteile aktivieren",
+  "text.autoconfig.simplebuilding.option.enableArmorTrimBenefits.@Tooltip": "Wenn deaktiviert, erhältst du keine Gameplay-Boni (z.B. Wasseratmung) durch Rüstungsbesätze."
 }
